--- a/turkey/turkey.html
+++ b/turkey/turkey.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <link rel="stylesheet" href="test.css" />
+  <link rel="stylesheet" href="turkey.css" />
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 
@@ -52,7 +52,7 @@
 
   <div style="height: 100%" id="wrapper"> 
     <div id="map" style="width: 100%; height: 100%"></div>
-    <script src="test.js"></script>
+    <script src="turkey.js"></script>
   </div>
 </body>
 </html>
